--- a/Purchasing.Web/App_GlobalResources/Resources.resx
+++ b/Purchasing.Web/App_GlobalResources/Resources.resx
@@ -210,7 +210,16 @@
   <data name="Order_NoResults" xml:space="preserve">
     <value>No results found</value>
   </data>
-  <data name="Authorization_PermissionDenied">
-    <value xml:space="preserve">You do not have the permissions required access this order</value>
+  <data name="Authorization_PermissionDenied" xml:space="preserve">
+    <value>You do not have the permissions required access this order</value>
+  </data>
+  <data name="NoAccess_Org" xml:space="preserve">
+    <value>You do not have access to the requested Organization</value>
+  </data>
+  <data name="NoAccess" xml:space="preserve">
+    <value>You do not have access to the requested page</value>
+  </data>
+  <data name="NoAccess_Application" xml:space="preserve">
+    <value>You do not have access to the PrePurchasing system</value>
   </data>
 </root>
