Removed [details] as per trello card. We all agreed this seemed clear enough.

--- a/Purchasing.Web/App_GlobalResources/Resources.resx
+++ b/Purchasing.Web/App_GlobalResources/Resources.resx
@@ -175,7 +175,7 @@
     <value>Are you sure you want to split each line item across multiple accounts? [Description]</value>
   </data>
   <data name="Order_ConfirmModification" xml:space="preserve">
-    <value>Enabling line item and account modification will necessitate recalculating approvals once this order edit is submitted. [Details]</value>
+    <value>Enabling line item and account modification will necessitate recalculating approvals once this order edit is submitted.</value>
   </data>
   <data name="Order_ConfirmOrderSplit" xml:space="preserve">
     <value>Are you sure you want to split this order across multiple accounts? [Description]</value>
