--- a/Purchasing.Mvc/App_GlobalResources/Resources.resx
+++ b/Purchasing.Mvc/App_GlobalResources/Resources.resx
@@ -1,101 +1,237 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <root>
-	<!-- 
-		Microsoft ResX Schema
+  <!-- 
+    Microsoft ResX Schema 
+    
+    Version 2.0
+    
+    The primary goals of this format is to allow a simple XML format 
+    that is mostly human readable. The generation and parsing of the 
+    various data types are done through the TypeConverter classes 
+    associated with the data types.
+    
+    Example:
+    
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+                
+    There are any number of "resheader" rows that contain simple 
+    name/value pairs.
+    
+    Each data row contains a name, and value. The row also contains a 
+    type or mimetype. Type corresponds to a .NET class that support 
+    text/value conversion through the TypeConverter architecture. 
+    Classes that don't support this are serialized and stored with the 
+    mimetype set.
+    
+    The mimetype is used for serialized objects, and tells the 
+    ResXResourceReader how to depersist the object. This is currently not 
+    extensible. For a given mimetype the value must be set accordingly:
+    
+    Note - application/x-microsoft.net.object.binary.base64 is the format 
+    that the ResXResourceWriter will generate, however the reader can 
+    read any of the formats listed below.
+    
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+    
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with 
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
 
-		Version 1.3
-
-		The primary goals of this format is to allow a simple XML format 
-		that is mostly human readable. The generation and parsing of the 
-		various data types are done through the TypeConverter classes 
-		associated with the data types.
-
-		Example:
-
-		... ado.net/XML headers & schema ...
-		<resheader name="resmimetype">text/microsoft-resx</resheader>
-		<resheader name="version">1.3</resheader>
-		<resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
-		<resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
-		<data name="Name1">this is my long string</data>
-		<data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
-		<data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
-			[base64 mime encoded serialized .NET Framework object]
-		</data>
-		<data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
-			[base64 mime encoded string representing a byte array form of the .NET Framework object]
-		</data>
-
-		There are any number of "resheader" rows that contain simple 
-		name/value pairs.
-
-		Each data row contains a name, and value. The row also contains a 
-		type or mimetype. Type corresponds to a .NET class that support 
-		text/value conversion through the TypeConverter architecture. 
-		Classes that don't support this are serialized and stored with the 
-		mimetype set.
-
-		The mimetype is used for serialized objects, and tells the 
-		ResXResourceReader how to depersist the object. This is currently not 
-		extensible. For a given mimetype the value must be set accordingly:
-
-		Note - application/x-microsoft.net.object.binary.base64 is the format 
-		that the ResXResourceWriter will generate, however the reader can 
-		read any of the formats listed below.
-
-		mimetype: application/x-microsoft.net.object.binary.base64
-		value   : The object must be serialized with 
-			: System.Serialization.Formatters.Binary.BinaryFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.soap.base64
-		value   : The object must be serialized with 
-			: System.Runtime.Serialization.Formatters.Soap.SoapFormatter
-			: and then encoded with base64 encoding.
-
-		mimetype: application/x-microsoft.net.object.bytearray.base64
-		value   : The object must be serialized into a byte array 
-			: using a System.ComponentModel.TypeConverter
-			: and then encoded with base64 encoding.
-	-->
-	
-	<xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-		<xsd:element name="root" msdata:IsDataSet="true">
-			<xsd:complexType>
-				<xsd:choice maxOccurs="unbounded">
-					<xsd:element name="data">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-								<xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" msdata:Ordinal="1" />
-							<xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-							<xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-						</xsd:complexType>
-					</xsd:element>
-					<xsd:element name="resheader">
-						<xsd:complexType>
-							<xsd:sequence>
-								<xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-							</xsd:sequence>
-							<xsd:attribute name="name" type="xsd:string" use="required" />
-						</xsd:complexType>
-					</xsd:element>
-				</xsd:choice>
-			</xsd:complexType>
-		</xsd:element>
-	</xsd:schema>
-	<resheader name="resmimetype">
-		<value>text/microsoft-resx</value>
-	</resheader>
-	<resheader name="version">
-		<value>1.3</value>
-	</resheader>
-	<resheader name="reader">
-		<value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
-	<resheader name="writer">
-		<value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.3500.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-	</resheader>
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array 
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
+    <xsd:element name="root" msdata:IsDataSet="true">
+      <xsd:complexType>
+        <xsd:choice maxOccurs="unbounded">
+          <xsd:element name="metadata">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" />
+              </xsd:sequence>
+              <xsd:attribute name="name" use="required" type="xsd:string" />
+              <xsd:attribute name="type" type="xsd:string" />
+              <xsd:attribute name="mimetype" type="xsd:string" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="assembly">
+            <xsd:complexType>
+              <xsd:attribute name="alias" type="xsd:string" />
+              <xsd:attribute name="name" type="xsd:string" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="data">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
+              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
+              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
+              <xsd:attribute ref="xml:space" />
+            </xsd:complexType>
+          </xsd:element>
+          <xsd:element name="resheader">
+            <xsd:complexType>
+              <xsd:sequence>
+                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
+              </xsd:sequence>
+              <xsd:attribute name="name" type="xsd:string" use="required" />
+            </xsd:complexType>
+          </xsd:element>
+        </xsd:choice>
+      </xsd:complexType>
+    </xsd:element>
+  </xsd:schema>
+  <resheader name="resmimetype">
+    <value>text/microsoft-resx</value>
+  </resheader>
+  <resheader name="version">
+    <value>2.0</value>
+  </resheader>
+  <resheader name="reader">
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <resheader name="writer">
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </resheader>
+  <data name="NoAccess_Workgroup" xml:space="preserve">
+    <value>You do not have access to create orders in this workgroup</value>
+  </data>
+  <data name="NewOrder_Success" xml:space="preserve">
+    <value>New Order Created Successfully</value>
+  </data>
+  <data name="InactiveAccounts_Warning" xml:space="preserve">
+    <value>The following account(s) can not be used because they are now inactive: </value>
+  </data>
+  <data name="OrderEdit_Success" xml:space="preserve">
+    <value>Order Edited!</value>
+  </data>
+  <data name="OrderCopy_Success" xml:space="preserve">
+    <value>New Order Created: Existing Order Duplicated Successfully</value>
+  </data>
+  <data name="NotFound_Order" xml:space="preserve">
+    <value>Order not found.</value>
+  </data>
+  <data name="CommentRequired_Order" xml:space="preserve">
+    <value>A comment is required when denying an order</value>
+  </data>
+  <data name="ApprovalAction_Success" xml:space="preserve">
+    <value>{0} action for order #{1} processed successfully</value>
+  </data>
+  <data name="CancelOrder_NoAccess" xml:space="preserve">
+    <value>You don't have access to cancel this order</value>
+  </data>
+  <data name="CancelOrder_CommentRequired" xml:space="preserve">
+    <value>A comment is required when cancelling an order</value>
+  </data>
+  <data name="OrderCancelled_Success" xml:space="preserve">
+    <value>Order Cancelled</value>
+  </data>
+  <data name="ReRouteApproval_AccountError" xml:space="preserve">
+    <value>Account needs to be outside of the workgroup.</value>
+  </data>
+  <data name="FileUpload_NoFile" xml:space="preserve">
+    <value>No file provided to upload method</value>
+  </data>
+  <data name="ViewFile_NotFound" xml:space="preserve">
+    <value>The requested file could not be found</value>
+  </data>
+  <data name="ViewFile_AccessDenied" xml:space="preserve">
+    <value>You do not have access to view this file</value>
+  </data>
+  <data name="LocalStorage_LoadForm" xml:space="preserve">
+    <value>Looks like you were working on a form... do you want to load it back up?</value>
+  </data>
+  <data name="Order_ConfirmCancelLineSplit" xml:space="preserve">
+    <value>Are you sure you want to cancel the current line item split?</value>
+  </data>
+  <data name="Order_ConfirmCancelOrderSplit" xml:space="preserve">
+    <value>Are you sure you want to cancel the current order split?</value>
+  </data>
+  <data name="Order_ConfirmLineSplit" xml:space="preserve">
+    <value>Are you sure you want to split each line item across multiple accounts?</value>
+  </data>
+  <data name="Order_ConfirmModification" xml:space="preserve">
+    <value>Enabling line item and account modification will necessitate recalculating approvals once this order edit is submitted.</value>
+  </data>
+  <data name="Order_ConfirmOrderSplit" xml:space="preserve">
+    <value>Are you sure you want to split this order across multiple accounts?</value>
+  </data>
+  <data name="Order_ConfirmSubmit" xml:space="preserve">
+    <value>Are you sure you want to save this order?</value>
+  </data>
+  <data name="Order_Error_AccountOrManagerRequired" xml:space="preserve">
+    <value>You must choose either an account or an account manager to place this order as is</value>
+  </data>
+  <data name="Order_Error_AccountRequired" xml:space="preserve">
+    <value>You must choose an account to place this order as is</value>
+  </data>
+  <data name="Order_Error_LineItemRequired" xml:space="preserve">
+    <value>You must have at least one line item</value>
+  </data>
+  <data name="Order_Error_LineSplitNoAccount" xml:space="preserve">
+    <value>You have a line item split with an amount but no account specified</value>
+  </data>
+  <data name="Order_Error_LineSplitTotalAmountRequired" xml:space="preserve">
+    <value>You must account for the entire line item amount in each line item split</value>
+  </data>
+  <data name="Order_Error_OrderSplitWithNoAccount" xml:space="preserve">
+    <value>You have an order split with an amount but no account specified</value>
+  </data>
+  <data name="Order_Error_TotalAmountRequired" xml:space="preserve">
+    <value>You must account for the entire order amount</value>
+  </data>
+  <data name="Order_NoCommodityCodesMatch" xml:space="preserve">
+    <value>No Commodity Codes Match</value>
+  </data>
+  <data name="Order_NoResults" xml:space="preserve">
+    <value>No results found</value>
+  </data>
+  <data name="Authorization_PermissionDenied" xml:space="preserve">
+    <value>You do not have the permissions required access this order</value>
+  </data>
+  <data name="NoAccess_Org" xml:space="preserve">
+    <value>You do not have access to the requested Organization</value>
+  </data>
+  <data name="NoAccess" xml:space="preserve">
+    <value>You do not have access to the requested page</value>
+  </data>
+  <data name="NoAccess_Application" xml:space="preserve">
+    <value>You do not have access to the PrePurchasing system</value>
+  </data>
+  <data name="Role_CacheId" xml:space="preserve">
+    <value>{0}-Roles</value>
+  </data>
+  <data name="ApprovalAction_Fail" xml:space="preserve">
+    <value>{0} action by {1} was not successful</value>
+  </data>
+  <data name="OrderFdp_Updated" xml:space="preserve">
+    <value>FDP Completed updated</value>
+  </data>
+  <data name="Order_Error_LineItem" xml:space="preserve">
+    <value>Invalid Line item Detected</value>
+  </data>
 </root>
